--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "test": "jest --coverage"
   },
+
+  "jest": {
+    "preset": "jest-puppeteer",
+    "verbose": true
+  },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Frankiee00/Lab8.git"
@@ -22,5 +28,9 @@
     "@babel/preset-env": "^7.14.2",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3"
+  },
+  "dependencies": {
+    "jest-puppeteer": "^5.0.3",
+    "puppeteer": "^9.1.1"
   }
 }
